test_regress/t/t_vpi_var_bad1.v
/* verilator public_on */
/* verilator public_on */
module t();
    reg x;
endmodule
/* verilator public_off */